--- a/src/styles/components/IndexPricesCard/_index_prices_card.scss
+++ b/src/styles/components/IndexPricesCard/_index_prices_card.scss
@@ -3,6 +3,7 @@
     background-color: #fff;
     padding: 40px;
     text-align: center;
+    width: 31%;
     &:nth-child(2) {
         background-color: #031D5B;
         margin: 0 30px;
