--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@
 @import './components/ProjectCard/_project_card.css';
 @import './components/RequestSection/_request_section.css';
 @import './components/Footer/_footer.css';
+@import './components/Services/services.css';
 
 a {
     transition: all .2s ease-in-out;
