--- a/src/styles/components/Hero/_hero.scss
+++ b/src/styles/components/Hero/_hero.scss
@@ -39,19 +39,13 @@
     }
     &__illustration {
         position: relative;
-        // &::before {
-        //     content: '';
-        //     width: 600px;
-        //     height: 600px;
-        //     background: linear-gradient(92.93deg, rgba(44, 44, 44, 0.1) 5.62%, rgba(40, 97, 245, 0.1) 32.94%, rgba(255, 255, 255, 0.1) 80.1%);
-        //     position: absolute;
-        //     right: -80%;
-        //     top: 0;
-        //     border-radius: 100%;
-        // }
+        >div {
+            max-height: 100%;
+        }
         svg {
             position: absolute;
-            max-width: 120%;
+            max-width: 100%;
+            height: 500px;
         }
 
     } 
@@ -59,11 +53,8 @@
         .hero__illustration {
             height: 450px;
             svg {
-                position: absolute;
-                left: 60%;
-                top: 50%;
-                transform: translate(-50%, -50%);
                 max-width: 120%;
+                right: -10%;
             }
         }
     }
@@ -82,24 +73,19 @@
     }
     &__wrapper.contacts {
         .hero__illustration {
-            height: 550px;
+            height: 500px;
             svg {
-                position: absolute;
-                left: 60%;
-                top: 40%;
-                transform: translate(-50%, -50%);
+                top: -15%;
+                right: -15%;
             }
         }
     }
     &__wrapper.blog {
         .hero__illustration {
-            height: 550px;
+            height: 500px;
             svg {
                 position: absolute;
-                left: 60%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-                max-width: 70%;
+                right: -10%;
             }
         }
     }
