--- a/src/styles/components/Advantage/_advantage.scss
+++ b/src/styles/components/Advantage/_advantage.scss
@@ -43,3 +43,11 @@
         }
     }
 }
+
+@media screen and (max-width: 1024px) {
+    .advantage {
+        &__illustration {
+            display: none;
+        }
+    }
+}
