--- a/src/styles/components/Button/_button.scss
+++ b/src/styles/components/Button/_button.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     border-radius: 30px;
+    cursor: pointer;
     // text-transform: capitalize;
     font-weight: 500;
     transition: all .2s ease-in-out;
