--- a/src/styles/components/ReasonSection/_reason_section.scss
+++ b/src/styles/components/ReasonSection/_reason_section.scss
@@ -37,3 +37,64 @@
         }
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .reason {
+        &__inner {
+            background: none;
+            margin-top: 30px;
+        }
+        &__circle {
+            &:nth-child(1), &:nth-child(2), &:nth-child(3), &:nth-child(4) {
+                transform: translate(0);
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .reason {
+        &__inner {
+            flex-wrap: wrap;
+            padding: 0;
+        }
+        &__circle {
+            border-radius: 30px;
+            width: calc(25% - 20px);
+            margin: 20px 0;
+            height: 120px;
+            padding: 30px;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .reason {
+        margin-top: 100px;
+        &__circle {
+            width: calc(50% - 10px);
+            margin: 10px 0;
+            height: 120px;
+            padding: 15px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.06);
+        }
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .reason {
+        margin-top: 50px;
+        
+    }
+}
+
+@media screen and (max-width: 540px) {
+    .reason {
+        &__circle {
+            width: calc(50% - 5px);
+            margin: 5px 0;
+            padding: 10px;
+            font-size: 0.9em;
+        }
+    }
+}
