--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,10 @@
 @import './components/RequestSection/_request_section.css';
 @import './components/Footer/_footer.css';
 @import './components/Services/services.css';
+@import './pages/Projects/projects.css';
+@import './components/RequestModal/request_modal.css';
+@import  './pages/Contacts/Contacts.css';
+@import './components/BurgerMenu/_burger_menu.css';
 
 a {
     transition: all .2s ease-in-out;
@@ -34,12 +38,17 @@ body.home {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
+    main {
+        overflow-x: hidden;
+    }
 }
 
 .container {
     margin-left: auto;
     margin-right: auto;
-    padding: 0 50px;
+    padding: 0 100px;
+    width: 100%;
+    max-width: 1280px;
 }
 
 .main-title {
@@ -52,4 +61,74 @@ body.home {
     font-size: 2.7em;
     font-weight: 600;
     line-height: 1.3;
+}
+
+@media screen and (max-width: 1350px) {
+    body.home {
+        background-size: 110%;
+    }
+}
+
+
+@media screen and (max-width: 1280px) {
+    .container {
+        padding: 0 80px;
+    }
+    .main-title {
+        font-size: 2.7em;
+    }
+}
+
+@media screen and (max-width: 1250px) {
+    body.home {
+        background-size: 120%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    body.home {
+        background-size: 130%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .main-title {
+        font-size: 2.4em;
+    }
+    .sub-title {
+        font-size: 2.2em;
+    }
+    .container {
+        padding: 0 50px;
+    }
+    body.home {
+        background-size: 170%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    body.home {
+        background-size: 185%;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    body.home {
+        background-size: 200%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 0 30px;
+    }
+    body.home {
+        background: none;
+    }
+    .main-title {
+        font-size: 2.2em;
+    }
+    .sub-title {
+        font-size: 1.92em;
+    }
 }
